[tool.poetry]
name = "prehab"
version = "0.1.0"
description = ""
authors = ["David James McCorrie <djmccorrie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.1"
hvplot = "^0.8.2"
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pyhamcrest = "^2.0.4"
jupyter = "^1.0.0"
jupyterlab = "^3.5.2"
voila = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
