[tool.poetry]
name = "prehab"
version = "0.1.0"
description = ""
authors = ["David James McCorrie <djmccorrie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.1"
hvplot = "^0.8.2"
pandas = "^1.5.2"
black = "^22.12.0"
ambiance = "^1.3.1"
matplotlib = "^3.6.3"
sympy = "^1.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pyhamcrest = "^2.0.4"
jupyter = "^1.0.0"
jupyterlab = "^3.5.2"
voila = "^0.4.0"
pylint = "^2.15.10"
isort = "^5.11.4"
pre-commit = "^2.21.0"
mypy = "^0.991"
python-language-server = {extras = ["all"], version = "^0.36.2"}
pyls-black = "^0.4.7"
pyls-isort = "^0.2.2"
pyls-mypy = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
